--- a/Trabalho final 1/split_concat.ipynb
+++ b/Trabalho final 1/split_concat.ipynb
@@ -13,7 +13,8 @@
     "from glob import glob\n",
     "import random\n",
     "import imutils\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
@@ -67,6 +68,17 @@
     "atlas[trans_mask] = [255, 255, 255, 255]\n",
     "atlas = cv2.cvtColor(atlas, cv2.COLOR_BGRA2RGB)\n",
     "plt.imshow(atlas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e81f95eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(\"./recortes do atlas\"):\n",
+    "    os.mkdir(\"./recortes do atlas\")"
    ]
   },
   {
