--- a/Trabalho final 2/filtro.ipynb
+++ b/Trabalho final 2/filtro.ipynb
@@ -122,9 +122,16 @@
     "\n",
     "            frame = cvzone.overlayPNG(frame, overlay_resized, overlay_place)\n",
     "            \n",
-    "            plt.imshow(frame)\n",
-    "            plt.axis(\"off\")\n",
-    "            plt.show()"
+    "\n",
+    "            ### PARA VISUALIZAR O VIDEO EM TEMPO REAL ###\n",
+    "            #cv2.imshow(\"video\", frame)\n",
+    "            #############################################\n",
+    "\n",
+    "            ### PARA VISUALIZAR O FRAME A FRAME ###\n",
+    "            #plt.imshow(frame)\n",
+    "            #plt.axis(\"off\")\n",
+    "            #plt.show()\n",
+    "            #######################################"
    ]
   }
  ],
